--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -47,14 +47,14 @@ jobs:
     needs: build
 
     steps:
-      - name: Downloading artifact
+      - name: Download artifact
         uses: actions/download-artifact@v2
         with:
           name: production-files
           path: ./dist
 
-      - name: Deploying to gh-pages
+      - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GHU_ACCESS_TOKEN }}
           publish_dir: ./dist
